# CMakeFlameResolver

./: .gitignore  CMakeFlameResolver.cmake  CMakeFlameResolverConfig.cmake.in  CMakeLists.txt  LICENSE  README.md  README.ru.md
cmake/: Api.cmake  CmakeFlameResolver.cmake  Compilers.cmake  Functions.cmake  Generation.cmake  Macros.cmake  Options.cmake  Packaging.cmake  Platform.cmake  Properties.cmake  Variables.cmake
cmake/Compilers/: Clang.cmake  Common.cmake  CompilersConfig.h.in  Gcc.cmake  Msvc.cmake
cmake/Functions/: CommonFunctions.cmake  CompileBinaryFunctions.cmake  CompileLibraryFunctions.cmake  HeaderLibraryFunctions.cmake  PrintFunctions.cmake  PropertyFunctions.cmake  ResolveFunctions.cmake  TargetPropertiesFunctions.cmake
cmake/Functions/ResolveFunctions/: ResolveBinaries.cmake  ResolveHeaders.cmake  ResolveObjectLibraries.cmake  ResolveSharedLibraries.cmake  ResolveStaticLibraries.cmake
cmake/Functions/TargetPropertiesFunctions/: BinaryTargetProperties.cmake  HeaderTargetProperties.cmake  ObjectTargetProperties.cmake  SharedTargetProperties.cmake  StaticTargetProperties.cmake
cmake/Generation/: Config.cmake
cmake/Options/: CodeGenerationOptions.cmake  CommonOptions.cmake  FlagOptions.cmake
cmake/Packaging/: CMake.cmake  Conan.cmake
cmake/Platform/: Unix.cmake  Windows.cmake
cmake/Properties/: GlobalProperties.cmake  TargetProperties.cmake
example/: CMakeLists.txt
